--- a/calculo-notas.html
+++ b/calculo-notas.html
@@ -25,8 +25,8 @@
             }
             
             function convertirExplicaciones(){
-                var explicacionModulo = "La nota del módulo es la media de las notas de las evaluaciones, redondeada. "
-                    "Si alguna evaluación puntua por debajo de 5, la nota máxima será un 4."
+                var explicacionModulo = "La nota del módulo es la media de las notas de las evaluaciones, redondeada. " +
+                    "Si alguna evaluación puntua por debajo de 5, la nota máxima será un 4.";
 
                 var explicacionEvaluacion = "La nota de la evaluación se calcula a partir de las notas de los " +
                     "exámenes, trabajos y actitud. Es una suma poderada en la que los exámenes cuentan un 65%, " +
@@ -319,17 +319,11 @@
 
                 function actualizaCalculados(){
                     console.log("Actualizando calculados" );
-                    setTimeout( function(){
-                        var inp = $("input.calculado"); 
-                        console.log( "Pongo readonly:" + inp.size() );
-                        inp.prop( "readonly", "readonly" );
-                    }, 1000 );
-                    setTimeout( function(){
-                        var inp = $('input:not(".calculado")');
-                        console.log( "Quito readonly:" + inp.size() );
-                        inp.removeProp("readonly");
-                    }, 2000 );
-                    
+
+                    var inp = $('input:not(".calculado")');
+                    var inpCalc = $("input.calculado"); 
+                    inp.prop("readonly","");
+                    inpCalc.prop( "readonly", "readonly" );
                 }
 
                 function convertirEnLlaveExpandible(id){
