Los exámenes son algo más estrechos

--- a/calculo-notas.html
+++ b/calculo-notas.html
@@ -329,22 +329,22 @@
                             <div class="calculo-examenes colapsable">    
 
                                 <div class="parcial">
-                                    <label>Parcial 1</label>
+                                    <label class="estrecho">Parcial 1</label>
                                     <input class="nota evaluacion-examenes-parcial" type="number"/>
                                 </div>
 
                                 <div class="parcial">
-                                    <label>Parcial 2</label>
+                                    <label class="estrecho">Parcial 2</label>
                                     <input class="nota evaluacion-examenes-parcial" type="number"/>
                                 </div>
 
                                 <div class="final">
-                                    <label>Final</label>
+                                    <label class="estrecho">Final</label>
                                     <input class="nota evaluacion-examenes-final" type="number" id="evaluacion1-final"/>
                                 </div>
 
                                 <div class="recuperacion">
-                                    <label>Recuperación</label>
+                                    <label class="estrecho">Recuperación</label>
                                     <input class="nota evaluacion-examenes-recuperacion" type="number"/>
                                 </div>
                                 
