--- a/calculo-notas.html
+++ b/calculo-notas.html
@@ -379,8 +379,11 @@
                                 <input class="nota evaluacion-trabajos" type="number"/>
                             </div>
 
-                            <div  class="calculo-trabajos colapsable">
-                                <div class="nuevo-trabajo">+trabajo</div>
+                            <div class="calculo-trabajos colapsable">
+                                <div class="trabajo trabajo-por-crear">
+                                    <label class="estrecho">Trabajo <span class="autonumerico-trabajo"></span></label>
+                                    <input class="nota nota-trabajo" type="number"/>
+                                </div>
                             </div>
 
                         </div>
