Falta actualizar correctamente los campos input y las notas de los trabajos

--- a/UnaAutocreacionTest.html
+++ b/UnaAutocreacionTest.html
@@ -37,7 +37,8 @@
                 var classToRemove = "trabajo-por-crear";
                 var removeSelector = ".quita-trabajo";
                 
-                Autocreacion.autocreacion(templateElem,fieldSelector,classToRemove,removeSelector);
+                //Autocreacion.autocreacion(templateElem,fieldSelector,classToRemove,removeSelector);
+                Autocreacion.actualizaAutocreaciones(".trabajo",fieldSelector,classToRemove,removeSelector);
             }
             
             $(document).ready(ready);
